--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,15 @@ eureka.client.service-url.defaultZone = http://localhost:8010/eureka
 
 # Resource server
 spring.cloud.gateway.server.webflux.routes[0].id=users-status-check
-spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.server.webflux.routes[0].uri=lb://demo-resource-server
+#http://localhost:8081
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/users/status/check
 spring.cloud.gateway.server.webflux.routes[0].predicates[1]=Method=GET
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=RemoveRequestHeader=Cookie
 
 spring.cloud.gateway.server.webflux.routes[1].id=albums
-spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:8091
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://album-resource-server
+#http://localhost:8091
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/albums
 spring.cloud.gateway.server.webflux.routes[1].predicates[1]=Method=GET
 spring.cloud.gateway.server.webflux.routes[1].filters[0]=RemoveRequestHeader=Cookie
